# LogViewer

./: .travis.yml  CMakeLists.txt  LogViewer.pro  appveyor.yml  config.xml  configuration.cpp  configuration.h  field.cpp  field.h  fielddelegate.cpp  fielddelegate.h  fieldmodel.cpp  fieldmodel.h  fieldview.cpp  fieldview.h  filterdialog.ui  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectwizard.cpp  newprojectwizard.h  newprojecwizardpage.cpp  newprojecwizardpage.h  newprojecwizardpage.ui  project.cpp  project.h  projectattributeswizardpage.cpp  projectattributeswizardpage.h  projectattributeswizardpage.ui  qt_patch.txt  searchlogmodel.cpp  searchlogmodel.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
helper/: CMakeLists.txt
helper/include/helper/: appconfig.h
helper/src/: appconfig.cpp
projectmanager/: CMakeLists.txt  field.cpp  field.h  fielddelegate.cpp  fielddelegate.h  fieldmodel.cpp  fieldmodel.h  fieldview.cpp  fieldview.h  newprojecwizardpage.cpp  newprojecwizardpage.h  newprojecwizardpage.ui  project.cpp  project.h  projectattributeswizardpage.cpp  projectattributeswizardpage.h  projectattributeswizardpage.ui  projectwizard.cpp  projectwizard.h  remoteendwizardpage.cpp  remoteendwizardpage.h  remoteendwizardpage.ui
